<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/my_bg_anim"
    tools:context=".login.LoginActivityCadastro">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:visibility="gone" />
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/dimen_10">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:scaleType="fitXY"
                        android:id="@+id/img_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/slide1"/>
                    <TextView
                        android:id="@+id/texto_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:fontFamily="serif-monospace"
                        android:gravity="center_horizontal"
                        android:text="@string/texto_lgin"
                        android:textSize="12sp"
                        android:layout_marginTop="5dp"/>
                    <LinearLayout
                        android:layout_marginBottom="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center">
                        <com.google.android.gms.common.SignInButton
                          android:id="@+id/sign_in_button_google"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content">
                      </com.google.android.gms.common.SignInButton>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <EditText
                        android:id="@+id/nomeuser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nome"
                        android:imeActionId="6"
                        android:layout_marginTop="5dp"
                        android:imeActionLabel="@string/nome"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColorHint="@color/transparent2"
                        android:drawablePadding="10dp"
                        android:drawableLeft="@drawable/ic_person_outline_black_24dp"
                        android:background="@drawable/buttonstyle2"
                        android:textColor="@color/colorPrimary"
                        android:singleLine="true" />
                    <EditText
                        android:id="@+id/sobrenomeuser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sobrenome"
                        android:imeActionId="6"
                        android:textColorHint="@color/transparent2"
                        android:layout_marginTop="5dp"
                        android:imeActionLabel="@string/sobrenome"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:maxLines="1"
                        android:drawablePadding="10dp"
                        android:drawableLeft="@drawable/ic_person_outline_black_24dp"
                        android:background="@drawable/buttonstyle2"
                        android:textColor="@color/colorPrimary"
                        android:singleLine="true" />

                        <AutoCompleteTextView
                            android:id="@+id/email"
                            android:layout_marginTop="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawablePadding="10dp"
                            android:drawableLeft="@drawable/ic_email_black_24dp"
                            android:hint="@string/prompt_email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:textColorHint="@color/transparent2"
                            android:imeActionLabel="@string/prompt_email"
                            android:background="@drawable/buttonstyle2"
                            android:textColor="@color/colorPrimary"
                            android:singleLine="true" />
                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/senha"
                            android:imeActionId="6"
                            android:layout_marginTop="5dp"
                            android:imeActionLabel="@string/prompt_password"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textColorHint="@color/transparent2"
                            android:drawablePadding="10dp"
                            android:drawableLeft="@drawable/ic_lock_open_black_24dp"
                            android:background="@drawable/buttonstyle2"
                            android:textColor="@color/colorPrimary"
                            android:singleLine="true" />

                    <EditText
                        android:id="@+id/verificarpassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/verificar_palavra_passe"
                        android:imeActionId="6"
                        android:layout_marginTop="5dp"
                        android:imeActionLabel="@string/verificar_palavra_passe"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColorHint="@color/transparent2"
                        android:drawablePadding="10dp"
                        android:drawableLeft="@drawable/ic_lock_open_black_24dp"
                        android:background="@drawable/buttonstyle2"
                        android:textColor="@color/colorPrimary"
                        android:singleLine="true" />
                    <Button
                        android:layout_marginTop="10dp"
                        android:id="@+id/criar_conta"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/buttonstylepink"
                        android:text="Criar conta"
                        android:textStyle="bold"
                        android:textColor="#fff"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_marginTop="@dimen/dimen_10"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/ja_tem_uma_conta"
                            android:textColor="@color/colorPrimary"
                            android:layout_width="match_parent"
                            android:textSize="10sp"
                            android:textAlignment="center"
                            android:layout_height="wrap_content"
                            android:text="Já tem uma conta?"/>

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    </RelativeLayout>
</RelativeLayout>